# TinyServe

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  README_CN.md  xmake.lua
.github/workflows/: ci.yml  release.yml
debian/: ITP_TEMPLATE.txt  RFS_TEMPLATE.txt  changelog  control  copyright  gbp.conf  rules  salsa-ci.yml  tinyserve.manpages  tinyserve.metainfo.xml  tinyserve.postinst  tinyserve.postrm  tinyserve.service  watch
debian/source/: options
debian/tests/: control  smoke
debian/upstream/: metadata
docs/: AUR_SUBMISSION.md  DEBIAN_SUBMISSION.md
man/: tinyserve.1
packaging/aur/: .SRCINFO  PKGBUILD  tinyserve.install
scripts/: debian-release.sh  verify_431.sh  verify_conn_cap.sh  verify_dirlist_async.sh  verify_etag_304.sh  verify_idle_timeout.sh  verify_multiworker.sh  verify_random_boundary.sh  verify_read_timeout.sh  verify_zero_copy.sh
src/: auth.c  auth.h  config.c  config.h  file_serve.c  file_serve.h  http_parser.c  http_parser.h  http_response.c  http_response.h  log.c  log.h  main.c  mime.c  mime.h  path_utils.c  path_utils.h  proxy.c  proxy.h  range.c  range.h  route.c  route.h  server.c  server.h  tinyserve.h
tests/: CMakeLists.txt  test_config.c  test_http_parser.c  test_path_utils.c  test_range.c  test_smoke.c
